refactor: 스트림 toList()로 수정